--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,6 @@ RoxygenNote: 7.2.1
 Depends:
     R (>= 2.10)
 Imports:
-    randomForest
-    tidyverse
+    randomForest,
+    tidyverse,
     proxy
